# hornet2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  EDITOR_GUIDE.md  LICENSE  Makefile  README.md  arazzo.yaml  mise.toml  openapi.yaml
.github/workflows/: js.yml  rust.yml
docs/: 001-implementation-notes.md  IMPLEMENTATION_STATUS.md
issues/: 001-openapi-arazzo-parser.md  002-flow-graph-generation.md  003-web-ui-visualization.md  004-cli-basic-operations.md  005-k6-dsl-conversion.md  006-test-automation.md  007-result-report-generation.md  008-rust-http-client.md  009-load-testing.md  010-optimization.md  011-arazzo-web-editor.md  design_crud_api.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: convert.rs  export_arazzo.rs  export_openapi.rs  list.rs  mod.rs  serve.rs  validate.rs  visualize.rs
src/converters/: k6.rs  mod.rs
src/graph/: builder.rs  exporter.rs  mod.rs  validator.rs
src/loader/: arazzo.rs  mod.rs  openapi.rs  openapi_resolver.rs  project.rs  source_resolver.rs
src/lsp/: completion.rs  definition.rs  diagnostic.rs  document.rs  hover.rs  mod.rs  server.rs  workspace.rs
src/models/: arazzo.rs  mod.rs
src/runner/: k6.rs  mod.rs
src/server/: api.rs  lsp.rs  mod.rs  state.rs
src/telemetry/: config.rs  mod.rs  shutdown.rs
src/validation/: consistency.rs  data_dependencies.rs  mod.rs  operations.rs  parameters.rs  schemas.rs
tests/: convert_test.rs  crud_test.rs  graph_test.rs  integration_test.rs  multi_project_test.rs
tests/fixtures/: arazzo.yaml  invalid_arazzo.yaml  invalid_deps_arazzo.yaml  openapi.yaml
tests/fixtures/k6/: generated-workflow.js
tests/fixtures/multi_project/project1/: arazzo.yaml  openapi.yaml
tests/fixtures/multi_project/project2/: arazzo.yaml  openapi.yaml
ui/: .env.example  .gitignore  app.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  style.css  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
ui/src/: App.jsx  App.test.jsx  App.test.tsx  App.tsx  main.tsx  style.css  vite-env.d.ts
ui/src/components/: ApiDocDrawer.tsx  ApiDocViewer.tsx  ConfirmDialog.tsx  Controls.jsx  Controls.tsx  CytoscapeView.jsx  CytoscapeView.tsx  DataSourcePanel.tsx  DetailsPanel.jsx  DetailsPanel.tsx  OperationList.tsx  StatusBar.jsx  StatusBar.tsx  SuggestionPanel.tsx  WorkflowSelector.tsx  WorkflowView.tsx  YamlEditor.tsx
ui/src/components/__tests__/: OperationList.test.tsx  WorkflowView.test.tsx
ui/src/lib/: cytoscape.js  cytoscape.ts
ui/src/pages/: EditorPage.tsx  VisualizationPage.tsx
ui/src/stores/: editorStore.ts  projectStore.ts
ui/src/styles/: components.css
ui/src/types/: editor.ts  graph.ts
ui/src/utils/: dataFlowAnalyzer.ts
ui/src/utils/__tests__/: dataFlowAnalyzer.test.ts
