[package]
name = "hornet2"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# OpenAPI parsing
oas3 = "0.20"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Graph processing
petgraph = "0.8"
regex = "1.12"

# Web server
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"

# Utility
tempfile = "3.24"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
